[package]
name = "collaborative-websocket"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic"
path = "src/main.rs"

[[bin]]
name = "reliable"
path = "src/reliable_main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"